fixes tiny gap inbetween search dropdown (closes #192)

--- a/components/layout/header/index.styl
+++ b/components/layout/header/index.styl
@@ -115,6 +115,7 @@ input#layout-header__search__input
 .layout-header__search__results
   position absolute
   left 0
+  top topbar_h
   width 100%
   display none
   background secondbackgroundgray
